--- a/tests/data/en/msg00000.html
+++ b/tests/data/en/msg00000.html
@@ -8,9 +8,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML//EN">
 <HTML>
 <HEAD>
-<TITLE>
-Namazuのテスト
-</TITLE>
+<TITLE>Test for Namazu</TITLE>
 <LINK REV="made" HREF="mailto:test@namazu.org
 ">
 </HEAD>
@@ -24,17 +22,14 @@ Namazuのテスト
 <!--X-TopPNI-End-->
 <!--X-MsgBody-->
 <!--X-Subject-Header-Begin-->
-<H1>
-Namazuのテスト
-</H1>
+<H1>Test for Namazu</H1>
 <HR>
 <!--X-Subject-Header-End-->
 <!--X-Head-of-Message-->
 <UL>
 <LI><em>To</em>: bug-namazu@namazu.org
 </LI>
-<LI><em>Subject</em>: 
-Namazuのテスト
+<LI><em>Subject</em>: Test for Namazu
 </LI>
 <LI><em>From</em>: test@namazu.org
 </LI>
@@ -47,8 +42,8 @@ Namazuのテスト
 <!--X-Head-Body-Sep-End-->
 <!--X-Body-of-Message-->
 <PRE>
-Namazu は手軽に使えることを第一に目指した日本語全文検索
-システムです。このファイルはテスト用です。
+Namazu is a full-text search system intended for easy
+use.  This file is for testing.
 </PRE>
 
 <!--X-Body-of-Message-End-->
