--- a/tests/data/html-split/1.html
+++ b/tests/data/html-split/1.html
@@ -2,10 +2,10 @@
         "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
-<title>Test for mknmz's --html-split option</title>
+<title>Test for mknmz's --html-split option 1</title>
 </head>
 <body>
-<h1>Test for mknmz's --html-split option</h1>
+<h1>Test for mknmz's --html-split option 1</h1>
 
 <p>
 xyzzy
